# chariot

./: LICENSE  README.md  pyproject.toml
docs/: new_drive_setup.md
scripts/: anticlogging_calib.py  can_down.sh  clear_can_errors.py  joystick_control_can.py  motor_state_logger.py  print_can_state.py
src/chariot/: __init__.py
src/chariot/control/: __init__.py  can_simple_interface.py  odrive_enums_0.6.5.py  odrive_manager.py
src/chariot/control/can/: README.md
src/chariot/joystick/: __init__.py  pyjoy.py
udev/: 99-dxs-spectrum.rules
