[tool.poetry]
name = "chariot"
version = "0.1.0"
description = ""
authors = ["Maxwell Svetlik <max@maxwellsvetlik.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
can = "^0.0.0"
cantools = "^38.0.2"
func-timeout = "^4.3.5"
inputs = "^0.5"
odrive = "^0.6.5.post1"
pyjoystick = "^1.2.4"
structlog = "^22.3.0"
black = "^23.1.0"
mypy = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

